cvs/ports/x11/kde4/marble/patches/patch-src_lib_marble_CMakeLists_txt,v
head	1.2;
access;
symbols
	OPENBSD_6_0:1.2.0.8
	OPENBSD_6_0_BASE:1.2
	OPENBSD_5_9:1.2.0.4
	OPENBSD_5_9_BASE:1.2
	OPENBSD_5_8:1.2.0.6
	OPENBSD_5_8_BASE:1.2
	OPENBSD_5_7:1.2.0.2
	OPENBSD_5_7_BASE:1.2
	OPENBSD_5_6:1.1.0.2
	OPENBSD_5_6_BASE:1.1;
locks; strict;
comment	@# @;


1.2
date	2015.01.05.22.30.54;	author dcoppa;	state Exp;
branches;
next	1.1;
commitid	uCZTgHuOfGU721ws;

1.1
date	2014.07.09.20.03.29;	author zhuk;	state Exp;
branches;
next	;
commitid	VIGhneE7m6586cHK;


desc
@@


1.2
log
@
Fix for the following error:

<command-line>:0:13: warning: missing terminating " character [enabled by default]
/usr/ports/pobj/marble-4.14.2/marble-4.14.2/tests/TestGeoDataWriter.cpp:52:5: error: stray '\' in program
     dataDir = QDir( TESTSRCDIR );
     ^
/usr/ports/pobj/marble-4.14.2/marble-4.14.2/tests/TestGeoDataWriter.cpp:52:5: error: missing terminating " character

...And regen patches while here.
@
text
@$OpenBSD: patch-src_lib_marble_CMakeLists_txt,v 1.1 2014/07/09 20:03:29 zhuk Exp $
--- src/lib/marble/CMakeLists.txt.ports.orig	Mon Oct  6 00:35:01 2014
+++ src/lib/marble/CMakeLists.txt	Mon Jan  5 16:23:32 2015
@@@@ -49,7 +49,7 @@@@ set(GENERIC_LIB_SOVERSION "19")
 if (QTONLY)
   # ce: don't know why this is needed here - on win32 'O2' is activated by default in release mode
   if(NOT WIN32)
-    add_definitions (${QT_DEFINITIONS} -O3)
+    add_definitions (${QT_DEFINITIONS})
   endif(NOT WIN32)
 
   include_directories(
@@@@ -57,7 +57,7 @@@@ if (QTONLY)
   )
 else (QTONLY)
   if(NOT WIN32)
-    add_definitions (${QT_DEFINITIONS} ${KDE4_DEFINITIONS} -O3)
+    add_definitions (${QT_DEFINITIONS} ${KDE4_DEFINITIONS})
   endif(NOT WIN32)
 
   include_directories(
@


1.1
log
@"small update" (c) tedu@@

Here KDE 4.13.2 comes. Big release changelogs could be read here:

  http://www.kde.org/announcements/4.12/
  http://www.kde.org/announcements/4.13/

Critical things you should be aware of:

  1. Nepomuk is gone, it's superseeded by Baloo. Nepomuk libraries
     are still here, though, but they do rely on Baloo internally.

  2. kdnssd was renamed to zeroconf-ioslave;

  3. kwallet was renamed to kwalletmanager;

  4. Akonadi cache will be rebuilt; this could result in change
     of PIM folder indexes, which in turn could mess up your
     mail filters - beware.

  5. ... a lot of other little problems that always happen during
     update.

Things could be broken for a day or two in subtle ways - don't
hesistate on reporting them!
@
text
@d1 4
a4 4
$OpenBSD$
--- src/lib/marble/CMakeLists.txt.ports.orig	Tue Jun  3 14:59:09 2014
+++ src/lib/marble/CMakeLists.txt	Tue Jun  3 14:59:22 2014
@@@@ -49,7 +49,7 @@@@ set(GENERIC_LIB_SOVERSION "18")
@

